# pepper_navigation

./: CMakeLists.txt  README.md  compile.sh  run.sh  run_onboard.sh  run_test.sh
cmake/: BIAS_CMakeLists.txt  libqgv_CMakeLists.txt
data/: README.md
data/offlinetest/kf/: kl_00000.txt  kl_00003.txt  kl_00006.txt  kl_00009.txt  kl_00012.txt  kl_00014.txt  kl_00015.txt  kl_00018.txt  kl_00023.txt  kl_00035.txt  kl_00047.txt  kl_00057.txt  kl_00064.txt  kl_00071.txt  kl_00079.txt  kl_00084.txt  kl_00091.txt  kl_00098.txt
data/offlinetest/kfls/: kl_00050.txt  kl_00057.txt  kl_00061.txt  kl_00073.txt  kl_00083.txt  kl_00092.txt  kl_00096.txt  kl_00100.txt  kl_00106.txt  kl_00113.txt  kl_00128.txt  kl_00138.txt  kl_00163.txt  kl_00188.txt  kl_00210.txt  kl_00222.txt  kl_00241.txt  kl_00260.txt  kl_00288.txt  kl_00309.txt  kl_00313.txt  kl_00321.txt  kl_00332.txt  kl_00343.txt  kl_00348.txt  kl_00356.txt  kl_00369.txt  kl_00381.txt  kl_00398.txt  kl_00407.txt  kl_00412.txt  kl_00417.txt  kl_00423.txt  kl_00429.txt  kl_00438.txt  kl_00445.txt  kl_00455.txt  kl_00465.txt  kl_00486.txt  kl_00495.txt  (+27 more)
data/tmap/: conf.txt
data/tmap/Branch_17a/: kl_03604.txt  kl_03608.txt  kl_03612.txt  kl_03616.txt  kl_03621.txt  kl_03625.txt  kl_03631.txt  kl_03636.txt  kl_03642.txt
data/tmap/Branch_17c/: kl_00152.txt  kl_00163.txt  kl_00170.txt  kl_00178.txt  kl_00183.txt  kl_00188.txt  kl_00195.txt  kl_00205.txt  kl_00213.txt
data/tmap/Branch_28a/: kl_04029.txt  kl_04032.txt  kl_04036.txt  kl_04042.txt  kl_04046.txt  kl_04053.txt  kl_04057.txt  kl_04061.txt  kl_04066.txt  kl_04073.txt
data/tmap/Branch_28c/: kl_00995.txt  kl_00999.txt  kl_01005.txt  kl_01010.txt  kl_01016.txt  kl_01021.txt  kl_01025.txt
data/tmap/Branch_48a/: kl_01215.txt  kl_01222.txt  kl_01236.txt  kl_01241.txt  kl_01245.txt  kl_01251.txt  kl_01257.txt  kl_01269.txt  kl_01279.txt  kl_01289.txt  kl_01294.txt
data/tmap/Branch_48c/: kl_01687.txt  kl_01692.txt  kl_01696.txt  kl_01701.txt  kl_01705.txt  kl_01710.txt  kl_01714.txt  kl_01719.txt
data/tmap/Branch_57a/: kl_03045.txt  kl_03050.txt  kl_03054.txt  kl_03060.txt  kl_03066.txt  kl_03073.txt  kl_03083.txt
depthnav/: CMakeLists.txt  DepthImageScanner.cpp  DepthImageScanner.h  README.md  alpose2d.cpp  alpose2d.h  depth_traits.h  depthnav_Pepper.cpp  freespacenavigation.cpp  freespacenavigation.h  pepperevents.cpp  pepperlaser.h
linenav/: EDLineDetector.cpp  EDLineDetector.hh  LineDescriptor.cpp  LineDescriptor.hh  LineStructure.hh  PairwiseLineMatching.cpp  PairwiseLineMatching.hh  README.md  dispnav.cpp  dispnav.h  kimread.cpp  kimread.h  linematch.cpp  linematch.h  linenavigation.cpp  linenavigation.h
linenav/edlbd/: EDLineDetector.cpp  LineDescriptor.cpp  LineDescriptor.hh
mapping/: README.md  build_linematching.sh  generate_configfile.m  getImages.m  select_ReferenceImages.m
mapping/linematching/: calLineReconsError.m  detectLines.m  getIndexin3v.m  getmatchedlinesin3v.m  matchLines.m
mapping/linematching/Linematching_iso/: BIAS_CMakeLists.txt  CMakeLists.txt  EDLineDetector.cpp  LineDescriptor.cpp  LineDescriptor.hh  PairwiseLineMatching.cpp  PairwiseLineMatching.hh  README.MD  detectlines.cpp  linematchfil.cpp  matchlines.cpp
mapping/linematching/Linematching_iso/arpack++/: Makefile
mapping/linematching/Linematching_iso/arpack++/srcs/: Makefile  make.inc
mapping/linematching/Linematching_iso/arpack++/srcs/ARPACK/: Makefile
mapping/linematching/Linematching_iso/arpack++/srcs/BLAS/: Makefile
mapping/linematching/Linematching_iso/arpack++/srcs/CBLAS/: Makefile
mapping/linematching/Linematching_iso/arpack++/srcs/SuperLU/: Makefile
mapping/linematching/Linematching_iso/arpack++/srcs/UTIL/: second.f
mapping/linematching/Linematching_iso/edlbd/: EDLineDetector.hh  LineStructure.hh  PairwiseLineMatching.cpp  PairwiseLineMatching.hh
mapping/linematching/Linematching_iso/edlbd/BIAS/: CMakeLists.txt  bias_config.h
mapping/linematching/Linematching_iso/edlbd/BIAS/Base/Common/: CompareFloatingPoint.cpp
mapping/linematching/Linematching_iso/edlbd/BIAS/Base/Debug/: Debug.cpp  DebugSimple.hh  Error.hh  LogFacility.cpp  LogFacility.hh  TimeMeasurement.hh  biasabort.cpp  biasabort.hh  biasexit.hh
mapping/linematching/Linematching_iso/edlbd/BIAS/Base/Image/: Image.cpp  ImageConvert.hh  ImageInline.hh  MetaData.hh  ROI.cpp  ROI.hh  ToHSL.cpp  ToInterleaved.cpp
mapping/linematching/Linematching_iso/edlbd/BIAS/Base/Math/: Matrix.cpp  Matrix.hh  Matrix2x2.cpp  Matrix2x2.hh  Matrix3x2.hh  Matrix3x4.cpp  Matrix4x4.hh  Polynom.hh  Utils.hh  Vector.cpp  Vector2.cpp  Vector2.hh  Vector3.hh  Vector4.hh
mapping/linematching/Linematching_iso/edlbd/BIAS/Base/Math/tnt/: cmat.h  subscript.h  tnt.h  tntmath.h  vec.h
mapping/linematching/Linematching_iso/edlbd/BIAS/Filter/: Convolution.cpp  FilterNTo2N.hh  FilterNToN.hh  Filterinst.hh  Gauss.cpp  GaussThreshold.cpp  GaussThreshold.hh  Mean.cpp  Mean.hh  Rescale.hh
mapping/tftLine/: getLinesFromEndPoints.m  normalizePoints.m  ransac.m  ransacfitTrifocalTensor_lines.m  skew.m  trifocaltensor_line.m
navmain/: README.md  nav_pepper_inside.cpp  nav_peppergui.cpp  nav_pepperoffline.cpp  nav_pepperonline.cpp  navigation.cpp  navigation.h  pepperInterface.cpp  pepperInterface.h  pepperOffline.cpp  pepperOffline.h  pepperRobot.cpp  pepperRobot.h  pepperRobotVirtual.cpp  pepperRobotVirtual.h  pepperevents.h  peppernavigation.h  topograph_astar.h  topograph_processor.h
navmain/maingui/: QGVCore.pri  README.md  main.cpp  maingui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  navinside.cpp  navinside.h  navwindow.cpp  navwindow.h  navwindow.ui  window_QT.cpp  window_QT.h
pepper_qi/: CMakeLists.txt  README.md
pepper_qi/apps/: main.cpp
pepper_qi/include/: camera.xml  vpControl.hpp  vpNaoqiGrabber.h  vpNaoqiRobot.h
pepper_qi/include/al/: from_any_value.cpp  from_any_value.hpp
pepper_qi/src/: vpControl.cpp  vpNaoqiGrabber.cpp  vpNaoqiRobot.cpp
qgv/: CMakeLists.txt  QGVCore.pri  QGVCore.pro  QGVEdge.cpp  QGVEdge.h  QGVNode.cpp  QGVNode.h  QGVScene.cpp  QGVScene.h  README.md
qgv/private/: QGVCore.h
(+475 files in other folders)
